Bootstrap added on all pages

--- a/app/views/internships/_form.html.erb
+++ b/app/views/internships/_form.html.erb
@@ -40,10 +40,6 @@
     <%= form.text_field :social_network_link, :class => 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit 'Далее', :class => 'btn btn-primary' %>
-  </div>
-
   <h1>Требования к стажеру</h1>
   <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что вы ожидаете от кандидата</small>
 
@@ -67,11 +63,11 @@
     <div>
       <%= form.label "Сколько длится стажировка?" %>
     </div>
-    <div class="row">
-      <div class="col">
+    <div class="d-flex justify-content-between">
+      <div>
         <%= form.date_select :internship_duration %>
       </div>
-      <div class="col">
+      <div>
         <%= form.check_box :internship_duration_none, {}, "1", "0" %>
         <%= form.label "Бессрочно" %>
         </div>
@@ -84,20 +80,27 @@
   </div>
 
   <div class="field form-group">
-    <%= form.label "Стажировка оплачивается?" %>
-    <%= form.text_field :salary, :class => 'form-control' %>
-    <%= form.check_box :salary_none, {}, "1", "0" %>
-    <%= form.label "Нет" %>
+    <div class="d-flex justify-content-between">
+      <%= form.label "Сколько будет получать стажер?" %>
+      <div>
+        <%= form.check_box :salary_none, {}, "1", "0" %>
+        <%= form.label "Стажировка не оплачивается" %>
+      </div>
+    </div>
+
+    <div class="form-group d-flex align-items-center">
+      <%= form.label "От", :class => 'col-sm-1'%>
+      <%= form.text_field :salary_min, :class => 'form-control col-sm-2', :placeholder => "10 000" %>
+
+      <%= form.label "До", :class => 'col-sm-1'%>
+      <%= form.text_field :salary_max, :class => 'form-control col-sm-2', :placeholder => "50 000" %>
+    </div>
   </div>
 
   <div class="field form-group">
     <%= form.label "Что предлагаете вы?" %>
     <%= form.text_area :conditions, :class => 'form-control', 'aria-label' => 'With textarea' %>
     <small id="conditionsHelp" class="form-text text-muted">Условия стажировки, возможность дальнейшего трудоустройства, офис, команда, плюшки.</small>
-  </div>
-
-  <div class="actions">
-    <%= form.submit 'Далее', :class => 'btn btn-primary' %>
   </div>
 
   <h1 class="mb-4">Заявка</h1>
@@ -125,13 +128,13 @@
     </div>
     <div class="row">
       <div class="input-group mb-3 col" id="datetimepicker1">
-        <%= form.text_field :deadline, :type => "text", :class => 'form-control' %>
+        <%= form.text_field :deadline, :type => "text", :class => 'form-control', :id => 'datetimepicker' %>
         <div class="input-group-append date">
-          <span class="input-group-text" id="basic-addon2">@</span>
+          <span class="input-group-text" id="basic-addon2"></span>
         </div>
       </div>
       <div class="col">
-        <%= form.check_box :deadline_none, {}, "1", "0" %>
+        <%= form.check_box :deadline_none, {}, true, false %>
         <%= form.label "Бессрочно" %>
       </div>
     </div>
@@ -142,9 +145,10 @@
     <% form.number_field :status %>
   </div>
 
-  <div class="actions">
-    <%= form.submit 'Опубликовать вакансию', :class => 'btn btn-primary' %>
+  <div class="d-flex justify-content-between mt-4 mb-5">
+      <%= link_to 'Назад', internships_path, :class => 'btn btn-outline-primary' %>
+      <div class="actions">
+        <%= form.submit 'Обновить стажировку', :class => 'btn btn-primary' %>
+      </div>
   </div>
-
-  <%# btn btn-primary %>
 <% end %>
