--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -4,6 +4,11 @@ h1 {
   margin-top: 2rem;
 }
 
+.h1-index {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 textarea.form-control {
   height: 135px;
 }
