--- a/app/views/internships/edit.html.erb
+++ b/app/views/internships/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Internship</h1>
+<!-- <h1>Editing Internship</h1> -->
 
 <%= render 'form', internship: @internship %>
-
-<%= link_to 'Show', @internship %> |
-<%= link_to 'Back', internships_path %>
