--- a/app/views/internships/new_step_2.html.erb
+++ b/app/views/internships/new_step_2.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @internship, local: true) do |form| %>
+<%= form_with(model: @internship, local: true, :class => 'col-6 m-auto') do |form| %>
   <% if @internship.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@internship.errors.count, "error") %> prohibited this internship from being saved:</h2>
@@ -11,47 +11,75 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :position %>
-    <%= form.text_field :position %>
+  <h1>Требования к стажеру</h1>
+  <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что вы ожидаете от кандидата</small>
+
+  <div class="field form-group">
+    <%= form.label "На какую позицию?" %>
+    <%= form.text_field :position, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :places_available %>
-    <%= form.number_field :places_available %>
+  <div class="field form-group">
+    <%= form.label "Сколько человек вы ищете?" %>
+    <%= form.number_field :places_available, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :intern_tasks %>
-    <%= form.text_area :intern_tasks %>
+  <div class="field form-group">
+    <%= form.label "Что стажер должен делать?" %>
+    <%= form.text_area :intern_tasks, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="intern_tasksHelp" class="form-text text-muted">Опишите как можно подробнее задачи стажера, так студентам будет легче понять, что от них хотят.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :internship_duration %>
-    <%= form.date_select :internship_duration %>
+  <div class="field form-group flex-column">
+    <div>
+      <%= form.label "Сколько длится стажировка?" %>
+    </div>
+    <div class="d-flex justify-content-between">
+      <div>
+        <%= form.date_select :internship_duration %>
+      </div>
+      <div>
+        <%= form.check_box :internship_duration_none, {}, "1", "0" %>
+        <%= form.label "Бессрочно" %>
+        </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :schedule%>
-    <%= form.select :schedule, options_for_select([["Полная"], ["Частичная"], ["Удаленная"], ["Смешанная"]]), include_blank: true%>
+  <div class="field form-group">
+    <%= form.label "Занятость" %>
+    <%= form.select :schedule, options_for_select([["Полная"], ["Частичная"], ["Удаленная"], ["Смешанная"]]), {}, {:class => 'custom-select'} %>
   </div>
 
-  <div class="field">
-    <%= form.label :salary %>
-    <%= form.number_field :salary %>
+  <div class="field form-group">
+    <div class="d-flex justify-content-between">
+      <%= form.label "Сколько будет получать стажер?" %>
+      <div>
+        <%= form.check_box :salary_none, {}, "1", "0" %>
+        <%= form.label "Стажировка не оплачивается" %>
+      </div>
+    </div>
+
+    <div class="form-group d-flex align-items-center">
+      <%= form.label "От", :class => 'col-sm-1'%>
+      <%= form.text_field :salary_min, :class => 'form-control col-sm-2', :placeholder => "10 000" %>
+
+      <%= form.label "До", :class => 'col-sm-1'%>
+      <%= form.text_field :salary_max, :class => 'form-control col-sm-2', :placeholder => "50 000" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :conditions %>
-    <%= form.text_area :conditions %>
+  <div class="field form-group">
+    <%= form.label "Что предлагаете вы?" %>
+    <%= form.text_area :conditions, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="conditionsHelp" class="form-text text-muted">Условия стажировки, возможность дальнейшего трудоустройства, офис, команда, плюшки.</small>
   </div>
 
   <%= form.number_field :step, value: 2 %>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="d-flex justify-content-between mt-4 mb-5">
+      <%= link_to 'Назад', new_step_1_internships_path, :class => 'btn btn-outline-primary' %>
+      <div class="actions">
+        <%= form.submit 'Далее', :class => 'btn btn-primary' %>
+      </div>
   </div>
 <% end %>
-
-
-<%= link_to 'Back', internships_path %>
