--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,47 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<div class="d-flex justify-content-between align-items-center col-9 mr-auto ml-auto mt-4 mb-5">
+  <h1 class="h1-index">Задания</h1>
+  <div class="actions">
+    <%= link_to 'Разместить задание', new_task_path, :class => 'btn btn-primary' %>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company specialty</th>
-      <th>Company description</th>
-      <th>Social network link</th>
-      <th>Position</th>
-      <th>Task description</th>
-      <th>Task materials</th>
-      <th>Deadline</th>
-      <th>Salary</th>
-      <th>Correction charge</th>
-      <th>Barter</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="d-flex flex-wrap col-9 m-auto justify-content-between">
+  <% @tasks.each do |task| %>
+    <div class="card mb-5" style="width: 18rem;">
+      <div class="card-body">
+        <p>Название компании: <%= task.company_name %></p>
+        <p>На позицию: <%= task.position %></p>
+        <p>Цена за выполнение задания: <%= task.salary %> рублей</p>
+        <p>Дедлайн заявки:
+          <% if task.deadline_none == true %>
+            <%= "Бессрочно" %>
+          <% else %>
+            <%= task.deadline %>
+          <% end %>
+        </p>
 
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.company_name %></td>
-        <td><%= task.company_specialty %></td>
-        <td><%= task.company_description %></td>
-        <td><%= task.social_network_link %></td>
-        <td><%= task.position %></td>
-        <td><%= task.task_description %></td>
-        <td><%= task.task_materials %></td>
-        <td><%= task.deadline %></td>
-        <td><%= task.salary %></td>
-        <td><%= task.correction_charge %></td>
-        <td><%= task.barter %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
+        <div class="actions">
+          <%= link_to 'Подробнее', task, :class => 'btn btn-outline-primary' %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
