--- a/app/views/tasks/new_step_2.html.erb
+++ b/app/views/tasks/new_step_2.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @task, local: true) do |form| %>
+<%= form_with(model: @task, local: true, :class => 'col-6 m-auto') do |form| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,46 +11,66 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :position %>
-    <%= form.text_field :position %>
+  <h1>Техническое задание</h1>
+  <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что именно вы ожидаете получить.</small>
+
+  <div class="field form-group">
+    <%= form.label "Какой специалист вам нужен?" %>
+    <%= form.text_field :position, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :task_description %>
-    <%= form.text_area :task_description %>
+  <div class="field form-group">
+    <%= form.label "Что нужно сделать?" %>
+    <%= form.text_area :task_description, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="task_descriptionHelp" class="form-text text-muted">Опишите техническое задание и ваши ожидания здесь.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :task_materials %>
-    <%= form.file_field :task_materials %>
+  <div class="field form-group">
+    <%= form.label "Материалы, которые будут полезны при выполнении тестового задания"  %>
+    <%= form.file_field :task_materials, :type => 'file', :class => 'form-control-file' %>
+    <small id="task_materialsHelp" class="form-text text-muted">Если есть.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :deadline %>
-    <%= form.date_select :deadline %>
+  <div class="field form-group flex-column">
+    <div>
+      <%= form.label "Сроки выполнения задания" %>
+    </div>
+    <div class="row">
+      <div class="input-group mb-3 col" id="datetimepicker1">
+        <%= form.text_field :deadline, :type => "text", :class => 'form-control' %>
+        <div class="input-group-append date">
+          <span class="input-group-text" id="basic-addon2">@</span>
+        </div>
+      </div>
+      <div class="col">
+        <%= form.check_box :deadline_none, {}, true, false %>
+        <%= form.label "Бессрочно" %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :salary %>
-    <%= form.number_field :salary %>
+  <div class="field form-group">
+    <%= form.label "Сколько вы заплатите за выполнение?" %>
+    <%= form.text_field :salary, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :correction_charge %>
-    <%= form.number_field :correction_charge %>
+  <div class="field form-group">
+    <%= form.label "Сколько стоит дополнительная правка?" %>
+    <%= form.text_field :correction_charge, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :barter %>
-    <%= form.text_area :barter %>
+  <div class="field form-group">
+    <%= form.label "Хотите предложить что-то помимо оплаты?" %>
+    <%= form.text_area :barter, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="barterHelp" class="form-text text-muted">Возможно вы готовы добавить имя исполнителя в качестве соавторов вашего проекта или хотите подарить экземпляр сверстанной им книги? Пишите об этом здесь.</small>
   </div>
 
   <% form.number_field :step, value: 2 %>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="d-flex justify-content-between mt-4 mb-5">
+      <%= link_to 'Назад', new_task_path, :class => 'btn btn-outline-primary' %>
+      <div class="actions">
+        <%= form.submit 'Разместить задание', :class => 'btn btn-primary' %>
+      </div>
   </div>
 <% end %>
-
-<%= link_to 'Back', tasks_path %>
